Base layout/setup

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,14 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "components/jquery": "~2.1",
+        "twbs/bootstrap": "~3.3",
+        "braincrafted/bootstrap-bundle": "~2.1",
+        "cross-solution/bootstrap3-dialog": "dev-master",
+        "knplabs/knp-paginator-bundle": "~2.5",
+        "oyejorge/less.php": "~1.7",
+        "fortawesome/font-awesome": "~4.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
