--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,7 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
+    site_title: Jesuit Science Network
 
 framework:
     #esi:             ~
@@ -35,19 +36,41 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+        site_title: "%site_title%"
 
 # Assetic Configuration
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
     bundles:        [ ]
+    read_from: "%kernel.root_dir%/../html/"
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
+        lessphp:
+            file: %kernel.root_dir%/../vendor/oyejorge/less.php/lessc.inc.php
+            apply_to: "\.less$"
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
         #yui_css:
         #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
+    assets:
+        scripts:
+            inputs:
+                - "%kernel.root_dir%/../vendor/components/jquery/jquery.js"
+                - "%kernel.root_dir%/../vendor/twbs/bootstrap/js/dropdown.js"
+                - "%kernel.root_dir%/../vendor/twbs/bootstrap/js/modal.js"
+                - "%kernel.root_dir%/../vendor/cross-solution/bootstrap3-dialog/dist/js/bootstrap-dialog.js"
+                - "%kernel.root_dir%/Resources/js/global.js"
+            output: js/scripts.js
+        styles:
+            inputs:
+                - "%kernel.root_dir%/Resources/css/fonts.css"
+                - "%kernel.root_dir%/../vendor/fortawesome/font-awesome/less/font-awesome.less"
+                - "%kernel.root_dir%/../vendor/cross-solution/bootstrap3-dialog/dist/css/bootstrap-dialog.css"
+                - "%kernel.root_dir%/Resources/less/bootstrap.less"
+            output: css/styles.css
 
 # Doctrine Configuration
 doctrine:
@@ -78,3 +101,14 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+braincrafted_bootstrap:
+    assets_dir: %kernel.root_dir%/../vendor/twbs/bootstrap
+    jquery_path: %kernel.root_dir%/../vendor/components/jquery/jquery.js
+    less_filter: lessphp
+    fonts_dir: %kernel.root_dir%/../html/fonts
+    auto_configure:
+        assetic: false
+    icon_prefix: fa
+    fontawesome_dir: %kernel.root_dir%/../vendor/fortawesome/font-awesome
+    icon_tag: i
