--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,11 +1,20 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
 security:
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         in_memory:
-            memory: ~
+            memory:
+                users:
+                    jsn:
+                        password: ieZ3eivi
+                        roles: "ROLE_ADMIN"
+                    preview:
+                        password: salvator
+                        roles: "ROLE_USER"
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -14,10 +23,10 @@ security:
             security: false
 
         main:
-            anonymous: ~
+            anonymous: false
             # activate different ways to authenticate
 
-            # http_basic: ~
+            http_basic: ~
             # http://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
 
             # form_login: ~
