--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,9 +1,26 @@
 # Learn more about services, parameters and containers at
 # http://symfony.com/doc/current/book/service_container.html
 parameters:
-#    parameter_name: value
+    viaf_cache_dir: "%kernel.root_dir%/cache/viaf/"
 
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+  jsn.provider.rdf.remote:
+    class: AppBundle\Viaf\RdfProvider\RemoteProvider
+    public: false
+
+  jsn.provider.rdf.caching:
+    class: AppBundle\Viaf\RdfProvider\CachingProvider
+    public: false
+    arguments:
+      - @jsn.provider.rdf.remote
+      - %viaf_cache_dir%
+
+  jsn.rdf_provider:
+    alias: jsn.provider.rdf.caching
+
+  jsn.command.fetch_viaf_names:
+    class: AppBundle\Command\FetchViafNamesCommand
+    arguments:
+      - @jsn.rdf_provider
+    tags:
+      - { name: console.command }
