--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "knplabs/knp-paginator-bundle": "~2.5",
         "oyejorge/less.php": "~1.7",
         "fortawesome/font-awesome": "~4.4",
-        "gregwar/cache": "1.0.*"
+        "gregwar/cache": "1.0.*",
+        "jolicode/jolitypo": "~0.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
