Added "Theology" as a subject (Harris)

--- a/app/Resources/yaml/subject_groups.yml
+++ b/app/Resources/yaml/subject_groups.yml
@@ -224,6 +224,7 @@ harris_theology:
         - Positive theology
         - Scholastic theology
         - Scripture
+        - Theology
 modern_agriculture_and_economics:
     name: Agriculture and economics
     scheme: modern
