--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,12 @@
             "SymfonyStandard\\": "app/SymfonyStandard/"
         }
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/seiyria/bootstrap-slider"
+        }
+    ],
     "require": {
         "php": ">=5.3.9",
         "symfony/symfony": "2.7.*",
@@ -28,8 +34,8 @@
         "fortawesome/font-awesome": "~4.4",
         "gregwar/cache": "1.0.*",
         "jolicode/jolitypo": "~0.2",
-        "twitter/typeahead.js": "~0.11",
-        "jms/serializer-bundle": "1.1.*"
+        "jms/serializer-bundle": "1.1.*",
+        "seiyria/bootstrap-slider": "~5.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
