Upgrade to Symfony 3.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,24 @@
 /app/bootstrap.php.cache
-/app/cache/*
-!app/cache/.gitkeep
 /app/config/parameters.yml
-/app/logs/*
-!app/logs/.gitkeep
-/app/phpunit.xml
+/build/
+/var/*
+!/var/cache
+/var/cache/*
+!var/cache/.gitkeep
+!/var/logs
+/var/logs/*
+!var/logs/.gitkeep
+!/var/sessions
+/var/sessions/*
+!var/sessions/.gitkeep
+!var/SymfonyRequirements.php
+/phpunit.xml
 /bin/
-/composer.phar
 /vendor/
-/html/bundles/*
+/html/bundles/
 logs
-fcgi-bin
 .idea
 /html/css/*
 !html/css/.gitkeep
 /html/js/*
 !html/js/.gitkeep
-
