--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,8 +29,10 @@ framework:
     session:
         # handler_id set to null will use default session handler from php.ini
         handler_id:  ~
+        save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"
     fragments:       ~
     http_method_override: true
+    assets: ~
 
 # Twig Configuration
 twig:
@@ -50,7 +52,7 @@ assetic:
         cssrewrite: ~
         lessphp:
             file: %kernel.root_dir%/../vendor/oyejorge/less.php/lessc.inc.php
-            apply_to: "\.less$"
+            apply_to: "\\.less$"
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
         #yui_css:
@@ -121,13 +123,13 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
-braincrafted_bootstrap:
-    assets_dir: %kernel.root_dir%/../vendor/twbs/bootstrap
-    jquery_path: %kernel.root_dir%/../vendor/components/jquery/jquery.js
-    less_filter: lessphp
-    fonts_dir: %kernel.root_dir%/../html/fonts
-    auto_configure:
-        assetic: false
-    icon_prefix: fa
-    fontawesome_dir: %kernel.root_dir%/../vendor/fortawesome/font-awesome
-    icon_tag: i
+#braincrafted_bootstrap:
+#    assets_dir: %kernel.root_dir%/../vendor/twbs/bootstrap
+#    jquery_path: %kernel.root_dir%/../vendor/components/jquery/jquery.js
+#    less_filter: lessphp
+#    fonts_dir: %kernel.root_dir%/../html/fonts
+#    auto_configure:
+#        assetic: false
+#    icon_prefix: fa
+#    fontawesome_dir: %kernel.root_dir%/../vendor/fortawesome/font-awesome
+#    icon_tag: i
