Add images/text to splash page

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,13 +72,13 @@ assetic:
                 - "%kernel.root_dir%/../vendor/twbs/bootstrap/js/scrollspy.js"
                 - "%kernel.root_dir%/../vendor/twbs/bootstrap/js/affix.js"
                 - "%kernel.root_dir%/Resources/vendor/bootstrap3-dialog-1.34.9/dist/js/bootstrap-dialog.js"
-                - "%kernel.root_dir%/Resources/vendor/vis/dist/vis.min.js"
                 - "%kernel.root_dir%/Resources/js/typeahead.bundle.js"
                 - "%kernel.root_dir%/Resources/vendor/bootstrap-treeview-1.2.0/src/js/bootstrap-treeview.js"
                 - "%kernel.root_dir%/../vendor/seiyria/bootstrap-slider/js/bootstrap-slider.js"
                 - "%kernel.root_dir%/Resources/vendor/bootstrap-select/dist/js/bootstrap-select.js"
                 - "%kernel.root_dir%/Resources/vendor/bootstrap-select/dist/js/i18n/defaults-en_US.js"
                 - "%kernel.root_dir%/Resources/js/markerclusterer.js"
+                - "%kernel.root_dir%/Resources/js/featherlight.js"
                 - "%kernel.root_dir%/Resources/js/global.js"
             output: js/scripts.js
         styles:
@@ -86,8 +86,8 @@ assetic:
                 - "%kernel.root_dir%/Resources/css/fonts.css"
                 - "%kernel.root_dir%/../vendor/fortawesome/font-awesome/less/font-awesome.less"
                 - "%kernel.root_dir%/Resources/vendor/bootstrap3-dialog-1.34.9/dist/css/bootstrap-dialog.css"
-                - "%kernel.root_dir%/Resources/vendor/vis/dist/vis.min.css"
                 - "%kernel.root_dir%/Resources/vendor/bootstrap-treeview-1.2.0/src/css/bootstrap-treeview.css"
+                - "%kernel.root_dir%/Resources/css/featherlight.css"
                 - "%kernel.root_dir%/Resources/less/bootstrap.less"
             output: css/styles.css
 
