--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
             "": "src/"
         },
         "files": [
-            "app/AppKernel.php"
+            "app/AppKernel.php",
+            "app/AppCache.php"
         ]
     },
     "autoload-dev": {
@@ -22,30 +23,30 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
-        "symfony/symfony": "3.0.*",
+        "php": ">=7.0",
+        "symfony/symfony": "3.2.*",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
         "symfony/swiftmailer-bundle": "^2.3",
-        "symfony/monolog-bundle": "^2.8",
+        "symfony/monolog-bundle": "^3.0",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "symfony/assetic-bundle": "~2.7",
-        "components/jquery": "~2.1",
+        "symfony/assetic-bundle": "~2.8",
+        "components/jquery": "~3.1",
         "twbs/bootstrap": "~3.3",
         "knplabs/knp-paginator-bundle": "~2.5",
         "oyejorge/less.php": "~1.7",
-        "fortawesome/font-awesome": "~4.4",
+        "fortawesome/font-awesome": "~4.7",
         "gregwar/cache": "1.0.*",
-        "jolicode/jolitypo": "~0.2",
-        "jms/serializer-bundle": "1.1.*",
-        "seiyria/bootstrap-slider": "~5.2"
+        "jolicode/jolitypo": "^1.0",
+        "jms/serializer-bundle": "^1.3",
+        "seiyria/bootstrap-slider": "~9.7"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^2.7"
+        "symfony/phpunit-bridge": "^3.0"
     },
     "scripts": {
         "post-install-cmd": [
