--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,7 +25,6 @@ framework:
         #assets_version: SomeVersionScheme
     default_locale:  "%locale%"
     trusted_hosts:   ~
-    trusted_proxies: ~
     session:
         # handler_id set to null will use default session handler from php.ini
         handler_id:  ~
@@ -51,7 +50,7 @@ assetic:
     filters:
         cssrewrite: ~
         lessphp:
-            file: %kernel.root_dir%/../vendor/oyejorge/less.php/lessc.inc.php
+            file: "%kernel.root_dir%/../vendor/oyejorge/less.php/lessc.inc.php"
             apply_to: "\\.less$"
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
