Fix accidental typo

--- a/app/Resources/yaml/mathnat.yml
+++ b/app/Resources/yaml/mathnat.yml
@@ -117,7 +117,7 @@ Zoology: true
 #########################################
 Arabic: false
 Aristotelian logic: false
-Canon ` law: false
+Canon law: false
 Cases of conscience: false
 Casuistry: false
 Catalan: false
