--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,6 +71,7 @@ assetic:
                 - "%kernel.root_dir%/../vendor/twbs/bootstrap/js/scrollspy.js"
                 - "%kernel.root_dir%/../vendor/twbs/bootstrap/js/affix.js"
                 - "%kernel.root_dir%/Resources/vendor/bootstrap3-dialog-1.34.9/dist/js/bootstrap-dialog.js"
+                - "%kernel.root_dir%/Resources/vendor/vis/dist/vis-network.min.js"
                 - "%kernel.root_dir%/Resources/js/typeahead.bundle.js"
                 - "%kernel.root_dir%/Resources/vendor/bootstrap-treeview-1.2.0/src/js/bootstrap-treeview.js"
                 - "%kernel.root_dir%/../vendor/seiyria/bootstrap-slider/src/js/bootstrap-slider.js"
@@ -86,6 +87,7 @@ assetic:
                 - "%kernel.root_dir%/../vendor/fortawesome/font-awesome/less/font-awesome.less"
                 - "%kernel.root_dir%/Resources/vendor/bootstrap3-dialog-1.34.9/dist/css/bootstrap-dialog.css"
                 - "%kernel.root_dir%/Resources/vendor/bootstrap-treeview-1.2.0/src/css/bootstrap-treeview.css"
+                - "%kernel.root_dir%/Resources/vendor/vis/dist/vis-network.min.css"
                 - "%kernel.root_dir%/Resources/css/featherlight.css"
                 - "%kernel.root_dir%/Resources/less/bootstrap.less"
             output: css/styles.css
