Add general physics as mathnat subject

--- a/app/Resources/yaml/mathnat.yml
+++ b/app/Resources/yaml/mathnat.yml
@@ -45,6 +45,7 @@ Exact sciences: true
 Experimental physics: true
 Forestry: true
 Fortifications: true
+General physics: true
 Geography: true
 Geology: true
 Geometry: true
