Add special physics as mathnat subject

--- a/app/Resources/yaml/mathnat.yml
+++ b/app/Resources/yaml/mathnat.yml
@@ -95,6 +95,7 @@ Pure mathematics: true
 Pyrostatics: true
 Sciences: true
 Scientific instruments: true
+Special physics: true
 Squaring of the circle: true
 Statics: true
 Statistics: true
