Add excursions as mathnat subject

--- a/app/Resources/yaml/mathnat.yml
+++ b/app/Resources/yaml/mathnat.yml
@@ -79,6 +79,7 @@ Natural and exact sciences: true
 Natural history: true
 Natural philosophy: true
 Natural sciences: true
+Naturalistic excursions: true
 Naval construction: true
 Naval maps: true
 Navigation: true
