--- a/app/Resources/yaml/mathnat.yml
+++ b/app/Resources/yaml/mathnat.yml
@@ -43,6 +43,7 @@ Engineering: true
 Euclidean geometry: true
 Exact sciences: true
 Experimental physics: true
+Fieldwork: true
 Forestry: true
 Fortifications: true
 General physics: true
