--- a/app/Resources/yaml/mathnat.yml
+++ b/app/Resources/yaml/mathnat.yml
@@ -40,6 +40,7 @@ Differential and integral calculus: true
 Elasticity: true
 Electricity: true
 Engineering: true
+Entomology: true
 Euclidean geometry: true
 Exact sciences: true
 Experimental physics: true
