--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -13,10 +13,10 @@ security:
                         password: ieZ3eivi
                         roles: "ROLE_ADMIN"
                     preview:
-                        password: salvator
+                        password: pumpingIron
                         roles: "ROLE_USER"
-                    emlo:
-                        password: rocketsalad
+                    vorschau:
+                        password: "sunday-column-19"
                         roles: "ROLE_USER"
 
     firewalls:
