--- a/app/Resources/yaml/subject_groups.yml
+++ b/app/Resources/yaml/subject_groups.yml
@@ -1,6 +1,5 @@
-harris_agriculture_and_economics:
+agriculture_and_economics:
     name: Agriculture and economics
-    scheme: harris
     subjects:
         - Agriculture
         - Agronomy
@@ -9,9 +8,8 @@ harris_agriculture_and_economics:
         - Livestock farming
         - Trading
         - Viticulture
-harris_astronomy:
+astronomy:
     name: Astronomy
-    scheme: harris
     subjects:
         - Astronomical facilities
         - Astronomical instruments
@@ -22,36 +20,33 @@ harris_astronomy:
         - Astronomy
         - Calendar
         - Calendars
+        - Chronology
         - Chronometry
         - Horology
         - Proper instrument use
         - Sun dials
         - Watchmaking
-harris_early_modern_sciences:
+early_modern_sciences:
     name: Early modern sciences
-    scheme: harris
     subjects:
         - Exact sciences
         - Natural and exact sciences
         - Natural sciences
         - Sciences
-harris_grammar:
+grammar:
     name: Grammar
-    scheme: harris
     subjects:
         - Infima
-harris_history:
+history:
     name: History
-    scheme: harris
     subjects:
         - Archaeology
         - Church history
         - Egyptology
         - Hieroglyphs
         - History
-harris_languages:
+languages:
     name: Languages
-    scheme: harris
     subjects:
         - Arabic
         - Catalan
@@ -82,23 +77,21 @@ harris_languages:
         - Spanish
         - Syntax
         - Turkish
-harris_literae_humaniores:
+literae_humaniores:
     name: Literae humaniores
-    scheme: harris
     subjects:
         - Literae humaniores
-harris_medicine:
+medicine:
     name: Medicine
-    scheme: harris
     subjects:
         - Biology
         - Medical botany
         - Medicine
         - Pharmaceutics
         - Pharmacy
-harris_mixed_mathematics:
+        - Surgery
+mixed_mathematics:
     name: Mixed mathematics
-    scheme: harris
     subjects:
         - Acoustics
         - Aerostatics
@@ -116,8 +109,11 @@ harris_mixed_mathematics:
         - Elasticity
         - Electricity
         - Engineering
+        - Experimental mechanics
         - Experimental physics
+        - Experiments
         - Fortifications
+        - General physics
         - Hydraulic engineering
         - Hydraulics
         - Hydrography
@@ -135,6 +131,7 @@ harris_mixed_mathematics:
         - Navigation
         - Numismatics
         - Optics
+        - Particular physics
         - Perspective
         - Physical cabinet
         - Physics
@@ -150,14 +147,15 @@ harris_mixed_mathematics:
         - Thermal conductivity
         - Vehicular dynamics
         - World map
-harris_natural_history:
+natural_history:
     name: Natural history
-    scheme: harris
     subjects:
         - Biology
         - Botany
         - Cosmography
+        - Entomology
         - Ethnology
+        - Fieldwork
         - Geography
         - Geology
         - Magnetism
@@ -166,19 +164,18 @@ harris_natural_history:
         - Mineralogy
         - Mining
         - Natural history
+        - Naturalistic excursions
         - Topography
         - Zoology
-harris_natural_philosophy:
+natural_philosophy:
     name: Natural philosophy
-    scheme: harris
     subjects:
         - Chemistry
         - Cosmology
         - Metaphysics
         - Natural philosophy
-harris_other:
+other:
     name: Other
-    scheme: harris
     subjects:
         - Canon law
         - Diplomacy
@@ -187,9 +184,8 @@ harris_other:
         - Heraldry
         - Law
         - Painting
-harris_philosophy:
+philosophy:
     name: Philosophy
-    scheme: harris
     subjects:
         - Aristotelian logic
         - Casuistry
@@ -198,9 +194,8 @@ harris_philosophy:
         - Logic
         - Moral philosophy
         - Philosophy
-harris_pure_mathematics:
+pure_mathematics:
     name: Pure mathematics
-    scheme: harris
     subjects:
         - Algebra
         - Arithmetic
@@ -214,9 +209,8 @@ harris_pure_mathematics:
         - Mathematics
         - Pure mathematics
         - Squaring of the circle
-harris_theology:
+theology:
     name: Theology
-    scheme: harris
     subjects:
         - Cases of conscience
         - Catechesis
@@ -232,325 +226,3 @@ harris_theology:
         - Scholastic theology
         - Scripture
         - Theology
-modern_agriculture_and_economics:
-    name: Agriculture and economics
-    scheme: modern
-    subjects:
-        - Agriculture
-        - Agronomy
-        - Forestry
-        - Horticulture
-        - Livestock farming
-        - Trading
-        - Viticulture
-modern_applied_science:
-    name: Applied science
-    scheme: modern
-    subjects:
-        - Aviation
-        - Hydraulic engineering
-        - Hydraulics
-        - Hydrography
-        - Naval construction
-        - Navigation
-        - Scientific instruments
-modern_architecture:
-    name: Architecture
-    scheme: modern
-    subjects:
-        - Aquaeducts
-        - Architectural engineering
-        - Architecture
-        - Civil architecture
-        - Fortifications
-        - Military architecture
-modern_art:
-    name: Art
-    scheme: modern
-    subjects:
-        - Drawing
-        - Painting
-modern_astrology:
-    name: Astrology
-    scheme: modern
-    subjects:
-        - Astrology
-modern_astronomy:
-    name: Astronomy
-    scheme: modern
-    subjects:
-        - Astronomical facilities
-        - Astronomical instruments
-        - Astronomical observations
-        - Astronomical observatories
-        - Astronomical observatory
-        - Astronomical projects
-        - Astronomy
-        - Calendar
-        - Calendars
-        - Proper instrument use
-modern_biology:
-    name: Biology
-    scheme: modern
-    subjects:
-        - Biology
-        - Botany
-        - Medical botany
-        - Zoology
-modern_chemistry:
-    name: Chemistry
-    scheme: modern
-    subjects:
-        - Chemistry
-modern_cosmography:
-    name: Cosmography
-    scheme: modern
-    subjects:
-        - Cosmography
-modern_cosmology:
-    name: Cosmology
-    scheme: modern
-    subjects:
-        - Cosmology
-modern_cryptology:
-    name: Cryptology
-    scheme: modern
-    subjects:
-        - Cryptology
-modern_dealing_with_data_about_the_condition_of_a_state:
-    name: Dealing with data about the condition of a state
-    scheme: modern
-    subjects:
-        - Statistics
-modern_diplomacy:
-    name: Diplomacy
-    scheme: modern
-    subjects:
-        - Diplomacy
-        - Military art
-        - Tactics
-modern_engineering:
-    name: Engineering
-    scheme: modern
-    subjects:
-        - Aviation
-        - Combustion
-        - Engineering
-        - Hydraulic engineering
-        - Hydraulics
-        - Hydrography
-        - Naval construction
-        - Scientific instruments
-modern_ethnology:
-    name: Ethnology
-    scheme: modern
-    subjects:
-        - Ethnology
-modern_geography:
-    name: Geography
-    scheme: modern
-    subjects:
-        - Cartography
-        - Geography
-        - Land surveying
-        - Naval maps
-        - Navigation
-        - Topography
-        - World map
-modern_geology:
-    name: Geology
-    scheme: modern
-    subjects:
-        - Geology
-        - Mineralogy
-        - Mining
-modern_history:
-    name: History
-    scheme: modern
-    subjects:
-        - Archaeology
-        - Church history
-        - Egyptology
-        - Epigraphy
-        - Heraldry
-        - Hieroglyphs
-        - History
-        - Numismatics
-modern_languages:
-    name: Languages
-    scheme: modern
-    subjects:
-        - Arabic
-        - Catalan
-        - Chinese writing system
-        - Classical languages
-        - Classical literature
-        - Classics
-        - Czech
-        - English
-        - French
-        - German
-        - Grammar
-        - Greek
-        - Hebrew
-        - Infima
-        - Italian
-        - Languages
-        - Latin
-        - Latin poetry
-        - Linguistics
-        - Literature
-        - Oriental languages
-        - Poetics
-        - Poetry
-        - Portuguese
-        - Rhetoric
-        - Russian
-        - Sinology
-        - Spanish
-        - Syntax
-        - Turkish
-modern_law:
-    name: Law
-    scheme: modern
-    subjects:
-        - Canon law
-        - Law
-modern_literae_humaniores:
-    name: Literae humaniores
-    scheme: modern
-    subjects:
-        - Literae humaniores
-modern_mathematics:
-    name: Mathematics
-    scheme: modern
-    subjects:
-        - Algebra
-        - Applied mathematics
-        - Arithmetic
-        - Calculus
-        - Combinatorics
-        - Differential and integral calculus
-        - Euclidean geometry
-        - Geometry
-        - Higher mathematics
-        - Logarithms
-        - Mathematics
-        - Mixed mathematics
-        - Perspective
-        - Pure mathematics
-        - Squaring of the circle
-modern_mechanics:
-    name: Mechanics
-    scheme: modern
-    subjects:
-        - Aerostatics
-        - Ballistics
-        - Hydrostatics
-        - Mechanics
-        - Practical mechanics
-        - Pyrostatics
-        - Statics
-        - Vehicular dynamics
-modern_medicine:
-    name: Medicine
-    scheme: modern
-    subjects:
-        - Medical botany
-        - Medicine
-        - Pharmaceutics
-        - Pharmacy
-modern_meteorology:
-    name: Meteorology
-    scheme: modern
-    subjects:
-        - Meteorological observations
-        - Meteorology
-modern_music:
-    name: Music
-    scheme: modern
-    subjects:
-        - Music
-modern_natural_history:
-    name: Natural history
-    scheme: modern
-    subjects:
-        - Natural history
-modern_optics:
-    name: Optics
-    scheme: modern
-    subjects:
-        - Optics
-        - Perspective
-modern_philosophy:
-    name: Philosophy
-    scheme: modern
-    subjects:
-        - Aristotelian logic
-        - Casuistry
-        - Eclectic philosophy
-        - Ethics
-        - Logic
-        - Metaphysics
-        - Moral philosophy
-        - Natural philosophy
-        - Philosophy
-modern_physics:
-    name: Physics
-    scheme: modern
-    subjects:
-        - Acoustics
-        - Elasticity
-        - Electricity
-        - Experimental physics
-        - Magnetism
-        - Physics
-        - Theoretical physics
-        - Thermal conductivity
-modern_science:
-    name: Science
-    scheme: modern
-    subjects:
-        - Exact sciences
-        - Natural and exact sciences
-        - Natural sciences
-        - Sciences
-modern_scientific_collections:
-    name: Scientific collections
-    scheme: modern
-    subjects:
-        - Mathematical cabinet
-        - Physical cabinet
-        - Scientific instruments
-modern_technology:
-    name: Technology
-    scheme: modern
-    subjects:
-        - Technology
-modern_theology:
-    name: Theology
-    scheme: modern
-    subjects:
-        - Cases of conscience
-        - Catechesis
-        - Controversial theology
-        - Dialectic theology
-        - Dogmatic theology
-        - Exegesis
-        - Liturgy
-        - Moral theology
-        - Patristics
-        - Polemic theology
-        - Positive theology
-        - Probabilism
-        - Scholastic theology
-        - Scripture
-        - Theology
-modern_timekeeping:
-    name: Timekeeping
-    scheme: modern
-    subjects:
-        - Chronometry
-        - Horology
-        - Sun dials
-        - Watchmaking
