--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,26 +1,10 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
 security:
-    encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
-
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         in_memory:
-            memory:
-                users:
-                    jsn:
-                        password: ieZ3eivi
-                        roles: "ROLE_ADMIN"
-                    preview:
-                        password: pumpingIron
-                        roles: "ROLE_USER"
-                    vorschau:
-                        password: "sunday-column-19"
-                        roles: "ROLE_USER"
-                    thesis:
-                        password: "different-mercury-81"
-                        roles: "ROLE_USER"
+            memory: ~
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -28,12 +12,5 @@ security:
             pattern: ^/(_(profiler|wdt|error)|css|images|js)/
             security: false
 
-        splash:
-            pattern: ^/$
-            security: false
-
         main:
-            anonymous: false
-            stateless: true
-            http_basic:
-              realm: "JSN"
+            anonymous: ~
