--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -87,6 +87,7 @@ services:
 
   jsn.search:
     class: AppBundle\SearchService
+    public: true
     arguments:
       - "@doctrine.orm.default_entity_manager"
       - "@knp_paginator"
