--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -8,6 +8,7 @@ imports:
 parameters:
     locale: en
     site_title: Jesuit Science Network
+    container.dumper.inline_class_loader: true
 
 framework:
     #esi:             ~
